MDEV-29499 Improving the 'Can't execute init_slave query' error message with the actual failure

Currently, there are multiple error codes reported for the issue 'Can't execute init_slave query'.
Those error codes are the underlying reason the init_slave query cannot be executed, but this makes it difficult to detect the issue in an automated way.
This patch introduces a new error code, ER_INIT_SLAVE_ERROR, to unify all the errors related to the init_slave query.
The ER_INIT_SLAVE_ERROR error is raised for any issue related to the init_slave query, and the underlying error code and message are included in the Last_SQL_Error field.